2011-11-17  Adam Barth  <abarth@webkit.org>

        Move test_result_writer out of layout_package
        https://bugs.webkit.org/show_bug.cgi?id=72586

        Rubber-stamped by Eric Seidel.

        This is part of a series of patches to remove layout_package.

        * Scripts/webkitpy/layout_tests/controllers/single_test_runner.py:
        * Scripts/webkitpy/layout_tests/controllers/test_result_writer.py: Copied from Tools/Scripts/webkitpy/layout_tests/layout_package/test_result_writer.py.
        * Scripts/webkitpy/layout_tests/layout_package/test_result_writer.py: Removed.
        * Scripts/webkitpy/tool/commands/rebaseline.py:

2011-11-17  Adam Barth  <abarth@webkit.org>

        svn-apply shouldn't magically move files into Source anymore
        https://bugs.webkit.org/show_bug.cgi?id=72579

        Reviewed by Eric Seidel.

        The Source directory has existed for long enough that we don't need
        svn-apply to magically re-write old-style patches anymore.

        * Scripts/VCSUtils.pm:
        (parseGitDiffHeader):
        (parseSvnDiffHeader):

2011-11-16  Ryosuke Niwa  <rniwa@webkit.org>

        Add a list of contribution areas
        https://bugs.webkit.org/show_bug.cgi?id=72566

        Reviewed by Eric Seidel.

        Added ContributionAreas class.

        * Scripts/webkitpy/common/config/contributionareas.py: Added.
        * Scripts/webkitpy/common/config/contributionareas_unittest.py: Added.

2011-11-16  Ryosuke Niwa  <rniwa@webkit.org>

        Refactor ChangeLogTest.test_parse_reviewer_text
        https://bugs.webkit.org/show_bug.cgi?id=72572

        Reviewed by Eric Seidel.

        Refactored the test code by introduing two helper functions.

        * Scripts/webkitpy/common/checkout/changelog_unittest.py:

2011-11-16  Eric Seidel  <eric@webkit.org>

        Add SCMDetector object to make scm detection mockable
        https://bugs.webkit.org/show_bug.cgi?id=72247

        Reviewed by Adam Barth.
